[package]
name = "conference-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = [
  "Document",
  "Element",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",
  "console",
  "Hid",                     #	The Hid class.
  "HidCollectionInfo",       #	The HidCollectionInfo dictionary.
  "HidConnectionEvent",      #	The HidConnectionEvent class.
  "HidConnectionEventInit",  #	The HidConnectionEventInit dictionary.
  "HidDevice",               #	The HidDevice class.
  "HidDeviceFilter",         #	The HidDeviceFilter dictionary.
  "HidDeviceRequestOptions", #	The HidDeviceRequestOptions dictionary.
  "HidInputReportEvent",     #	The HidInputReportEvent class.
  "HidInputReportEventInit", #	The HidInputReportEventInit dictionary.
  "HidReportInfo",           #	The HidReportInfo dictionary.
  "HidReportItem",           #	The HidReportItem dictionary.
  "HiddenPluginEventInit",   #	The HiddenPluginEventInit dictionary.
  "HidUnitSystem",           #	The HidUnitSystem enum.
]}
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.34"
chrono = { version = "0.4", features = ["wasmbind"] }
regex = "1.7.0"
console_error_panic_hook = "0.1.7"
